# team-manager

./: README.md
team-manager-backend/: .env  .env.example  index.js  package-lock.json  package.json  pyproject.toml  server.js
team-manager-backend/app/: database.py  main.py
team-manager-backend/app/models/: __init__.py  models.py
team-manager-backend/app/routers/: auth.py  dashboard.py  egypt_duty.py  exports.py  history.py  holidays.py  notifications.py  team.py
team-manager-backend/app/schemas/: schemas.py
team-manager-backend/app/services/: auth.py  moroccan_holidays.py
team-manager-backend/config/: db.js
team-manager-backend/controllers/: authController.js  dashboardController.js  egyptDutyController.js  eventController.js  historyController.js  holidaysController.js  notificationsController.js  teamController.js  teamManagementController.js
team-manager-backend/middleware/: auth.js
team-manager-backend/models/: Confirmation.js  EgyptDuty.js  Event.js  History.js  Holiday.js  Notification.js  Team.js  TeamMember.js  User.js
team-manager-backend/routes/: authRoutes.js  dashboardRoutes.js  egyptDutyRoutes.js  eventRoutes.js  exportsRoutes.js  historyRoutes.js  holidaysRoutes.js  notificationsRoutes.js  teamManagementRoutes.js  teamRoutes.js
team-manager-frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
team-manager-frontend/src/: App.tsx  index.css
team-manager-frontend/src/components/: Layout.tsx
team-manager-frontend/src/context/: AuthContext.tsx
team-manager-frontend/src/pages/: AdminDashboardPage.tsx  (+13 more)
(+2 files in other folders)
